name of company

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Lazy River Nursery and Garden Supply</title>
 </head>
 <body>
+    <h1>Lazy River Nursey and Garden Supply</h1>
     <li>Homepage</li>
     <li>Currently in Stock</li>
     <li>Hours and Location</li>
