--- a/index.html
+++ b/index.html
@@ -3,12 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lazy River Nursery and Garden Supply</title>
+    <title>Homepage</title>
 </head>
 <body>
     <h1>Lazy River Nursey and Garden Supply</h1>
-    <li>Homepage</li>
-    <li>Currently in Stock</li>
-    <li>Hours and Location</li>
+    <img src="starter_files/images/store-interior.jpg" alt="store-interior" 
+    height="250">
+    <nav>
+        <ul>
+            <li><a href="index.html">Home</a><li
+            <li><a href="in-stock.html">Currently in Stock</a></li>
+            <li><a href="info.html">Location and Hours</a></li>
+        </ul>
+    </nav>
+    <p>Lazy River Nursery and Garden Supply has been serving the garden needs of the Tri-State area since 1976. <br>
+        We have supplies for everyone from the small hobby gardener to landscaping contractors.<br>
+        At Lazy River, our staff are knowledgable about horticulture and can give you expert advice. <br>
+        We have very low turnover, so you can feel confident knowing that we'll remember your gardening needs and can help you manage your garden for years to come.<br>
+        Always friendly, always affordable, always green - that's the <strong>Lazy River Way!</strong><br>
+    </p>
 </body>
 </html>
