--- a/in-stock.html
+++ b/in-stock.html
@@ -9,7 +9,7 @@
     <h1>Currently in Stock</h1>
     <nav>
         <ul>
-            <li><a href="index.html">Home</a></li> 
+            <li><a href="index.html">Homepage</a></li> 
             <li><a href="in-stock.html">Currently in Stock</a></li>
             <li><a href="info.html">Location and Hours</a></li>
         </ul>
