--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     height="250">
     <nav>
         <ul>
-            <li><a href="index.html">Home</a><li
+            <li><a href="index.html">Homepage</a><li
             <li><a href="in-stock.html">Currently in Stock</a></li>
             <li><a href="info.html">Location and Hours</a></li>
         </ul>
@@ -19,8 +19,9 @@
     <p>Lazy River Nursery and Garden Supply has been serving the garden needs of the Tri-State area since 1976. <br>
         We have supplies for everyone from the small hobby gardener to landscaping contractors.<br>
         At Lazy River, our staff are knowledgable about horticulture and can give you expert advice. <br>
-        We have very low turnover, so you can feel confident knowing that we'll remember your gardening needs and can help you manage your garden for years to come.<br>
-        Always friendly, always affordable, always green - that's the <strong>Lazy River Way!</strong><br>
+        We have very low turnover, so you can feel confident knowing that we'll remember your <br>
+        gardening needs and can help you manage your garden for years to come.<br>
+        <em>Always friendly, always affordable, always green</em> - that's the <strong>Lazy River Way!</strong><br>
     </p>
 </body>
 </html>
