--- a/info.html
+++ b/info.html
@@ -9,14 +9,13 @@
     <h1>Hours and Location</h1>
     <nav>
         <ul>
-            <li><a href="index.html">Home</a><li
+            <li><a href="index.html">Homepage</a><li
             <li><a href="in-stock.html">Currently in Stock</a></li>
             <li><a href="info.html">Location and Hours</a></li>
         </ul>
 <p>
-    The nursery is located at 4400 Virginia Parkway, Cedarville, NC 27165 <br>
+    The nursery is located at 4400 Virginia Parkway, Cedarville, NC 27165. <br>
     Its hours are 9 AM - 7 PM Monday - Friday, 7 AM - 7 PM on Saturday, and 1 PM - 7 PM on Sunday
 </p>
-
 </body>
 </html>
